tests/invalid/module/file_module_missing.facet
mod missing_file_module;

fn main() -> affine isize {
  1
}
